--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
     "source.fixAll": true,
     "source.organizeImports": true
   },
-  "files.eol": "\n"
+  "files.eol": "\n",
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  }
 }
